[package]
name = "gbk2utf8"
version = "0.1.5"
edition = "2021"
build = "build.rs"
description = "CLI tool to detect and convert GBK-encoded source files to UTF-8 safely"
license = "MIT"
repository = "https://github.com/GenesisAN/gbk2utf8"
readme = "README.md"
keywords = ["gbk", "utf8", "encoding", "cli", "converter"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
encoding = "0.2"
built = { version = "0.7", features = ["chrono", "semver"] }
clap = { version = "4.5.40", features = ["derive"] }
chardetng = "0.1.17"
encoding_rs = "0.8.35"
ignore = "0.4"

[build-dependencies]
built = { version = "0.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

[dev-dependencies]
tempfile = "3"
